kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: 625684987071.dkr.ecr.us-east-1.amazonaws.com/wisecow:latest
          ports:
            - containerPort: 4499
      imagePullSecrets:
        - name: ecr-secret
